# parishkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/calendar-reservations/: README.md  calendar-reservations.py  example-config.yaml
scripts/create-ministry-rosters/: README.md  create-ministry-rosters.py  example-config.yaml
scripts/pk-sync-ps-to-cc/: example-config.yaml
scripts/pk-sync-ps-to-ggroup/: example-config.yaml
scripts/print-member/: README.md  example-config.yaml  print-member.py
scripts/print-ministries/: README.md  example-config.yaml  print-ministries.py
scripts/run/: README.md  parishkit-run.py
scripts/sync-google-group/: README.md  example-config.yaml  sync-google-group.py
scripts/sync-ps-to-cc/: README.md  example-config.yaml  sync-ps-to-cc.py
src/parishkit/: __init__.py  auth.py  cli.py  config.py  constant_contact.py  create_ministry_rosters.py  logging.py  parishsoft.py  parishsoft_runtime.py  pk_create_ps_ministry_rosters.py  pk_cron_runner.py  pk_sync_ps_to_cc.py  pk_sync_ps_to_ggroup.py  pk_validate_gcalendar_reservations.py  print_member.py  print_ministries.py  retry.py  runner.py  sync_google_group.py  sync_ps_to_cc.py
src/parishkit/email/: __init__.py  base.py  (+1 more)
tests/: test_calendar_reservations.py  test_cli_common.py  test_constant_contact.py  test_create_ministry_rosters.py  test_email_providers.py  test_google_helpers.py  test_logging.py  test_parishsoft.py  test_print_tools.py  test_runner.py  test_script_wrappers.py  test_sync_google_group.py  test_sync_ps_to_cc.py
(+4 files in other folders)
